# gRPCdemo

./: Cargo.toml  config.yml  docker-compose.yaml
abi/: Cargo.toml  build.rs
abi/protos/: document_collection.proto
abi/src/: config.rs  lib.rs
abi/src/error/: mod.rs
abi/src/pb/: document_collection.rs  mod.rs
abi/src/types/: document.rs  mod.rs
document_collection/: Cargo.toml
document_collection/src/: lib.rs  manager.rs
migrations/: 20231116011348_init.down.sql  20231116011348_init.up.sql  20231116144422_dc.down.sql  20231116144422_dc.up.sql
rfcs/: 0001-core-document_collection.md
service/: Cargo.toml
service/src/: db.rs  env.rs  lib.rs  main.rs  migrations.rs  routes.rs  service.rs
