[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
prost = "0.12.1"
prost-types = "0.12.1"
thiserror = "1.0.50"
tonic = { version = "0.10.2", features = ["gzip"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
prost-wkt = "0.5"
prost-wkt-types = "0.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.14"

[build-dependencies]
tonic-build = "0.10.2"
prost-wkt-build = "0.5"
prost-build = "0.12.1"
