[package]
name = "document_collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.74"
sqlx = "0.7.2"
thiserror = "1.0.50"
tokio = { version = "1.21.2", features = ["sync"] }
futures = { version = "0.3.25", default-features = false }
chrono = { version = "0.4.22", features = ["serde"] }
serde_json = "1"
prost-wkt = "0.5"
prost-wkt-types = "0.5"
tracing = "0.1.37"
tokio-stream = "0.1.11"
