[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.75"
document_collection = { version = "0.1.0", path = "../document_collection" }
tokio = { version = "1.34.0", features = ["full"] }
tonic = { version = "0.10.2", features = ["tls", "gzip"] }
futures = { version = "0.3.25", default-features = false }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
